Update to Processing 3.4
There is no Maven repository library for Processing 3.4 so I grabbed it from the Raspberry Pi Processing distribution and put it in the local file repo.

--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,19 @@
     </build>
 
     <dependencies>
+        <!--
         <dependency>
             <groupId>org.processing</groupId>
             <artifactId>core</artifactId>
             <version>3.3.7</version>
+            <scope>compile</scope>
+        </dependency>
+    -->
+
+        <dependency>
+            <groupId>org.processing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.4.1</version>
             <scope>compile</scope>
         </dependency>
 
